# sdd-architecture

./: .ai-index.md  .gitignore  .sdd-metadata.json  .spec.config  ARCHITECTURE_SOURCE_COMPILE_TEMPLATE.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  Dockerfile  IMPLEMENTATION_GUARDRAILS.md  INDEX.md  MIGRATION_v2_to_v3.md  Makefile  PHASE_4_AUDIT_REPORT.md  PHASE_4_COMPLETION.md  PHASE_4_SUMMARY.md  PHASE_5_COMPLETION.md  PHASE_8_AMBIGUITIES_AND_ROADMAP.md  PHASE_8_IMPLEMENTATION_CHECKLIST.md  PHASE_8_IMPLEMENTATION_CHECKLIST_UPDATED.md  PHASE_8_ORIGINAL_vs_CURRENT.md  PHASE_8_REAL_WORLD_VALIDATION_STRATEGY.md  PHASE_8_RELEASE_DOCUMENTATION_STRUCTURE.md  PHASE_8_RELEASE_EXECUTIVE_SUMMARY.md  PHASE_8_REVISED_PLAN.md  PHASE_8_SDD_WIZARD_SPECIFICATION.md  README-SDD-v3.0.md  README.md  RELEASE_CHECKLIST.md  RELEASE_v2.1.md  WIZARD_QUICK_START.md  agent_handshake.py  pyproject.toml  pyrightconfig.json  readme-detailed.md  readme-ia.md  run-wizard.sh  setup.sh  tree.txt  wizard.sh
_core/: .spec.config  Makefile.tests  README.md  agent_confidence.py  agent_handshake.py  debug_msgpack.py  diagnostics_test.py  governance_compliance.py  guidelines.dsl.compiled.json  health_check.py  mandate.spec.compiled.json  pyproject.toml  quiz_executor.py  quiz_questions.json  run-all-tests.py  run-all-tests.sh
_core/.sdd-cli/: main.py
_core/.sdd-cli/commands/: governance.py
_core/.sdd-cli/extensions/framework/: extension_framework.py  plugin_loader.py
_core/.sdd-cli/generators/: agent_seeds.py
_core/.sdd-cli/utils/: loader.py
_core/.sdd-compiled/: governance-client.json
_core/.sdd-compiler/: compiler.py  governance_compiler.py
_core/.sdd-compiler/src/: __init__.py  dsl_compiler.py  integrate.py  msgpack_encoder.py
_core/.sdd-compiler/tests/: test_compiler.py  test_compiler_real_data.py  test_msgpack.py  test_rtk_integration.py
_core/.sdd-core/: README.md  _START_HERE.md  deployment_manager.py  governance_orchestrator.py
_core/.sdd-core/tools/: context_optimizer.py  generate-specializations.py
_core/.sdd-migration/tests/: test_migration_v2_to_v3.py
_core/.sdd-migration/tooling/: constitution_parser.py  dsl_converter.py  guidelines_extractor.py  migrate.py  migration_validator.py
_core/.sdd-runtime/compiled/: DEPLOYMENT_MANIFEST.json
_core/.sdd-wizard/: ARCHITECTURE_ALIGNMENT.md  DOCUMENTATION_INDEX.md  FINAL_STATUS.md  WORKFLOW_FLOW.md  compile_artifacts.py  demo_interactive.py
_core/.sdd-wizard/.sdd-runtime/: customization_template_generator.py  governance_runtime_loader.py  wizard_integrator.py  wizard_orchestrator.py
_core/.sdd-wizard/SCRIPTS/: README.md  phase-0-agent-onboarding.py  setup-wizard.py  spec_validator.py  validate-ia-first.py  validate_adrs.py  validate_governance.py  validate_quiz.py
_core/.sdd-wizard/orchestration/: phase_1_validate.py  phase_2_load_compiled.py  phase_2_load_compiled_NEW.py  phase_2_load_compiled_v3.py  phase_3_filter_mandates.py  phase_4_5_6_generator.py  phase_4_filter_guidelines.py  phase_5_apply_template.py  phase_6_generate_project.py  phase_7_validate_output.py  phase_wizard_v3.py
_core/.sdd-wizard/src/: interactive_mode.py  interactive_mode.py.new  loader.py  validator.py  wizard.py
_core/.sdd-wizard/tests/: test_phases_1_2.py  test_phases_3_4.py  test_phases_5_7.py
_core/build_scripts/: compile_governance.py  extract_governance_items.py  fix_yaml_frontmatter.py  pipeline_builder.py  regenerate_from_catalog.py  regenerate_markdown.py  reorganize_source.py
_core/cli/: __main__.py  main.py
_core/cli/commands/: governance.py
_core/cli/extensions/: README.md
_core/cli/generators/: agent_seeds.py
_core/cli/utils/: loader.py
_core/compiled/: metadata-client-template.json  metadata-core.json
_core/compiler/: __init__.py  compiler.py  governance_compiler.py
_core/compiler/compiled/: governance-client.json  metadata-client-template.json
_core/compiler/runtime/: DEPLOYMENT_MANIFEST.json  metadata-client-template.json
_core/compiler/src/: __init__.py  __main__.py  dsl_compiler.py  integrate.py  msgpack_encoder.py
_core/compiler/tests/: test_compiler.py  test_compiler_real_data.py  test_msgpack.py  test_real_data.py  test_rtk_integration.py
_core/core/: DEPLOYMENT.md  OPERATIONS.md  deployment_manager.py  governance_orchestrator.py
_core/core/docs/: MAINTENANCE.md  OPERATIONS-INDEX.md
_core/core/tools/: context_optimizer.py  generate-specializations.py
_core/migration/docs/: ARCHITECTURE_OVERVIEW.md  USER_GUIDE.md
_core/migration/phase-archive/: INDEX.md  PHASE_8_PLANNING.md
_core/migration/tests/: conftest.py
_core/migration/tooling/: constitution_parser.py  guidelines_extractor.py  migrate.py
_core/runtime/compiled/: DEPLOYMENT_MANIFEST.json
_core/tests/: path_config.py  test_cli_typer.py  test_governance_immutability.py  test_phase_1_pipeline.py  test_phase_2_compiler.py  test_phase_3_integration.py  test_phase_4_deploy.py  test_phase_5_orchestrator.py  test_phase_5_wizard.py
_core/tests/execution/: test_generate_specializations.py  test_guardrail_code_review.py  test_setup_wizard.py  test_validate_ia_first.py
_core/tools/: agent_confidence.py  agent_handshake.py  debug_msgpack.py  diagnostics_test.py  governance_compliance.py  health_check.py  quiz_executor.py  run-all-tests.py  test_governance_immutability.py
_core/wizard/: compile_artifacts.py  demo_interactive.py
_core/wizard/.sdd-runtime/: customization_template_generator.py  governance_runtime_loader.py  wizard_integrator.py  wizard_orchestrator.py
_core/wizard/SCRIPTS/: phase-0-agent-onboarding.py  validate_adrs.py  validate_governance.py  validate_quiz.py
_core/wizard/orchestration/: phase_1_validate.py  phase_2_load_compiled.py  phase_2_load_compiled_v3.py  phase_3_filter_mandates.py  phase_4_5_6_generator.py  phase_4_filter_guidelines.py  phase_5_apply_template.py  phase_6_generate_project.py  phase_7_validate_output.py  phase_wizard_v3.py
_core/wizard/src/: interactive_mode.py  interactive_mode.py.new  loader.py  validator.py  wizard.py
_core/wizard/tests/: test_phases_1_2.py  test_phases_3_4.py  test_phases_5_7.py
(+301 files in other folders)
