[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-architecture-core"
version = "3.0.0"
description = "Core governance and wizard engine for SDD Architecture"
requires-python = ">=3.10"
dependencies = [
    "typer==0.12.1",
    "click==8.1.7",
    "rich==13.7.0",
    "msgpack==1.0.8",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pytest>=8.0.0",
    "pylint",
    "pytest-github-actions-annotate-failures",
    "types-PyYAML",
]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
no_implicit_optional = false
ignore_missing_imports = true
disable_error_code = [
    "valid-type",
    "attr-defined",
    "index",
    "assignment",
    "operator",
    "return-value",
    "var-annotated",
    "arg-type",
    "union-attr",
    "no-redef",
]
mypy_path = [
    ".",
    "build_scripts",
    "core",
    "compiler",
    "compiler/src",
    "compiler/src/runtime_telemetry_kit",
    "wizard",
    "wizard/src",
    "wizard/.sdd-runtime",
    "migration/tooling",
    "cli/extensions/framework",
]

[[tool.mypy.overrides]]
module = ["msgpack"]
ignore_missing_imports = true

[tool.black]
line-length = 127
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["_core"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 127
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function docstring
]

[tool.pylint.DESIGN]
max-args = 7
max-attributes = 10

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
exclude = ["cli*", "core*", "wizard*", "runtime*", "compiler*", "compiled*", "migration*", "integration*", "build_scripts*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "core",
    "core/src",
    "wizard",
    "wizard/src",
    "compiler",
    "compiler/src",
    "build_scripts",
    "../_spec"
]
python_files = ["test_*.py"]
addopts = "--strict-markers"