# ⚡ SDD (Specification-Driven Development) Configuration for Python
# Language: Python
# Clean Architecture + Test-Driven Development

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdd-project"
version = "1.0.0"
description = "Clean Architecture + TDD (M001, M002)"
requires-python = ">=3.10"

dependencies = [
    "dependency-injector>=4.41.0",  # Clean Architecture - DI
]

[project.optional-dependencies]
# TDD Mandate (M002): Test tools required
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "unittest-xml-reporting>=3.2.0",
]

dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pylint>=2.17.5",
    "flake8>=6.1.0",
    "pre-commit>=3.3.3",
]

[tool.pytest.ini_options]
# TDD requirement: All tests must pass for build success
testpaths = ["tests"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
# M002: TDD mandate - 80% minimum code coverage
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80  # TDD requirement

[tool.mypy]
# Clean Architecture: Type safety
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
strict = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]
